# avr

./: .travis.yml  Cargo.toml  LICENSE  README.md
src/: core.rs  cpu.rs  error.rs  inst.rs  io.rs  lib.rs  main.rs  math.rs  mcu.rs  mem.rs  program.rs  regs.rs  sreg.rs
src/addons/: mod.rs  uart.rs
src/chips/: atmega328p.rs  mod.rs
src/inst/: binary.rs  mod.rs
src/inst/binary/: mod.rs
src/inst/textual/: mod.rs
src/mcu/: atmega328p.rs  mod.rs
src/plugin/: mod.rs
tools/: emulator.rs
